force-app/main/default/objects/TriggerHandler_Setting__mdt/TriggerHandler_Setting__mdt.object-meta.xml
<CustomObject>
    <label>TriggerHandler Setting</label>
    <pluralLabel>TriggerHandler Settings</pluralLabel>
</CustomObject>