force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isAfterDeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>isAfterDeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterDeleteDisabled</label>
    <type>Checkbox</type>
</CustomField>