force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isAfterInsertDisabled__c.field-meta.xml
<CustomField>
    <fullName>isAfterInsertDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterInsertDisabled</label>
    <type>Checkbox</type>
</CustomField>