force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isAfterUndeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>isAfterUndeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterUndeleteDisabled</label>
    <type>Checkbox</type>
</CustomField>