force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isAfterUpdateDisabled__c.field-meta.xml
<CustomField>
    <fullName>isAfterUpdateDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAfterUpdateDisabled</label>
    <type>Checkbox</type>
</CustomField>