force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isBeforeDeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>isBeforeDeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBeforeDeleteDisabled</label>
    <type>Checkbox</type>
</CustomField>