force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isBeforeInsertDisabled__c.field-meta.xml
<CustomField>
    <fullName>isBeforeInsertDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBeforeInsertDisabled</label>
    <type>Checkbox</type>
</CustomField>