force-app/main/default/objects/TriggerHandler_Setting__mdt/fields/isBeforeUpdateDisabled__c.field-meta.xml
<CustomField>
    <fullName>isBeforeUpdateDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBeforeUpdateDisabled</label>
    <type>Checkbox</type>
</CustomField>